Fix #1774 - Dropdown doesn't match theme in dark mode (#2199)
* fix #1774

* fix highlight in dark theme

* change side-nav-color to #0f0f0f in black theme

--- a/src/renderer/themes.css
+++ b/src/renderer/themes.css
@@ -61,7 +61,7 @@
     --secondary-card-bg-color: rgba(0, 0, 0, 0.75);
     --scrollbar-color: #515151;
     --scrollbar-color-hover: #424242;
-    --side-nav-color: #000000;
+    --side-nav-color: #0f0f0f;
     --side-nav-hover-color: #212121;
     --side-nav-active-color: #303030;
     --search-bar-color: #262626;
